--- a/sistema_metodos_agiles/webApp/templates/home/sprintCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintCrear.html
@@ -24,7 +24,7 @@
           <label for="recipient-name" class="col-form-label">Descripcion Sprint</label>
           <input type="text" class="form-control" id="recipient-name" name="descripcion">
         </div>
-        <a class="btn btn-danger btn-sm" href="{% url 'webApp:rolesProyecto' proyecto.id %}">Cancelar</a>
+        <a class="btn btn-danger btn-sm" href="{% url 'webApp:sprintProyecto' proyecto.id %}">Cancelar</a>
         <button type="submit" id="btn-submit" class="btn btn-primary btn-sm">Guardar</button>
       </form>
 
