--- a/sistema_metodos_agiles/webApp/templates/home/sprint.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprint.html
@@ -42,7 +42,7 @@ Velocity Chart</a>
           {% endif %}
           {% if validacionPermisos.dsp_Burndown %}
           <a href=""
-            class="btn btn-sm btn-info">Burndown Chart</a>
+            class="btn btn-sm btn-dark">Burndown Chart</a>
           {% endif %}
           {% if validacionPermisos.dsp_SprinBack %}
           <a href="{% url 'webApp:sprintBacklog' proyecto.id sp.id %}" class="btn btn-sm btn-dark">Sprint Backlog</a>
