Resolucion de problemas de edicion

--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoEditar.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoEditar.html
@@ -12,6 +12,7 @@
     <div class="card-header">
       <h3>Editar colaborador</h3>
     </div>
+
     <div class="card-body">
       <form method="post" action="{% url 'webApp:editarColaboradorProyecto' proyecto.id %}">
         <input type="text" hidden="true" name="idColaborador" value="{{colaboradores.id}}"> 
@@ -26,8 +27,11 @@
         <div class="form-group">
           <select class="form-control custom-select" aria-label="Default select example" name="rol" multiple="true">
             <option selected>Seleccionar rol</option>
-            {% for rolProyecto in rolesProyecto %}
-            <option value="{{rolProyecto.id_rol}}">{{rolProyecto.nombre_rol}}</option>
+            {% for rolProyecto in rolesSelect %}
+              <option selected value="{{rolProyecto.id_rol}}">{{rolProyecto.nombre_rol}}</option>  
+            {% endfor %}
+            {% for rp in rolesNoSelect %}
+              <option value="{{rp.id_rol}}">{{rp.nombre_rol}}</option>  
             {% endfor %}
           </select>
         </div>
