--- a/sistema_metodos_agiles/webApp/templates/home/tipoUSImportar.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUSImportar.html
@@ -49,8 +49,8 @@
               {{tipo.fases}}
             </td>
             <td>
-              <!--{{tipo.proyecto_tipo_us}}-->
-              {{proyecto}}
+              {{tipo.proyecto_tipo_us}}
+              <!-- {{proyecto}} -->
             </td>
             <td>
               <form action="{% url 'webApp:importarTusDeProyecto' proyecto.id %}" method="POST">
