--- a/sistema_metodos_agiles/webApp/templates/home/usCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/usCrear.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="card">
     <div class="card-header">
-      <h3>Crear nuevo tipo de US</h3>
+      <h3>Crear User Story</h3>
     </div>
     <div class="card-body">
       <form method="post" action="{% url 'webApp:crearUsGuardar' proyecto.id %}">
