--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoCrear.html
@@ -13,7 +13,7 @@
       <h3>Agregar nuevo colaborador</h3>
     </div>
     <div class="card-body">
-      <form method="post" action="{% url 'webApp:asignarColaboradorProyecto' proyecto.id %}">
+      <form method="post" action="{% url 'webApp:asignarColaboradorProyecto' proyecto.id 0 %}">
         {% csrf_token %}
         <div class="form-group">
           <select class="form-control" aria-label="Default select example" name="usuario">
