--- a/sistema_metodos_agiles/webApp/templates/home/velocityChart.html
+++ b/sistema_metodos_agiles/webApp/templates/home/velocityChart.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% include 'includes/options.html' %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-<input type="text" hidden=true id="dicc_velocity" value = "{{dicc_velocity}}">
+<input type="text"  id="dicc_velocity" hidden = True value = "{{dicc_velocity}}">
 <canvas id="salesChart" style="height: 224px; width: 475px;" width="1425" height="672" class="card"></canvas>
 <div  id="myPlot" style="width:100%;max-width:700px"></div>
 <a class="btn btn-danger btn-sm" href="{% url 'webApp:sprintProyecto' proyecto.id %}">Volver</a>
@@ -18,6 +18,7 @@
 {% block javascripts %}
 <script>
 let velocity = JSON.parse($("input#dicc_velocity").val())
+console.log(velocity)
 new Chart(document.getElementById("salesChart"), {
     type: 'bar',
     data: {
