--- a/sistema_metodos_agiles/webApp/templates/home/burndownchart.html
+++ b/sistema_metodos_agiles/webApp/templates/home/burndownchart.html
@@ -32,26 +32,41 @@
 
 
 <script>
-var xValues = [$("input#cantidadUs").val()];
-var yValues = [$("input#cantidadDias").val()];
-generateData("x * 2 + 7", 0, 10, 0.5);
+//var xValues = [$("input#cantidadUs").val()];
+var xValues = [];
+for(let x = 1; x <= $("input#cantidadDias"); x += 1){
+  xValues.push(x);
+}
+
+
+var yValues = [$("input#cantidadUs").val()];
+ 
+
+ //generateData("x * 2 + 7", 0, 10, 0.5);
 
 new Chart("myChart", {
   type: "line",
   data: {
     labels: xValues,
     datasets: [{
+      label: "User Stories",
+      backgroundColor: "FFCC00",
       fill: false,
       pointRadius: 1,
       borderColor: "rgba(255,0,0,0.5)",
+      data: xValues
+    },
+    {
+      label: "Duracion Sprint(dias)",
       data: yValues
-    }]
+    }
+  ]
   },    
   options: {
     legend: {display: false},
     title: {
       display: true,
-      text: "y = x * 2 + 7",
+      text: "Burndown Chart",
       fontSize: 16
     }
   }
