Se actualizan los permisos

--- a/sistema_metodos_agiles/webApp/templates/home/CrearProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/CrearProyecto.html
@@ -70,9 +70,7 @@
         </div>
       </div>
     </div>
-
-
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Guardar</button>
   </form>
 </div>
 
