--- a/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
+++ b/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
@@ -27,7 +27,7 @@
         {% endif %}
       </h3>
       {% endif %}
-      {% if proyecto.estado.descripcion == "EN PROGRESO" %}
+      {% if proyecto.estado.descripcion == "EN PROGRESO" or proyecto.estado.descripcion == "CANCELADO" %}
       <h3 class="card-title">
         <small>Fecha Inicio: {{proyecto.fecha_ini_proyecto}}</small>
       </h3>
@@ -37,7 +37,9 @@
       <h3 class="card-title">
         <small>Dias Sprint: {{proyecto.sprint_dias}}</small>
       </h3>
+      {% if proyecto.estado.descripcion == "EN PROGRESO" %}
       <button class="btn btn-danger btn-sm cerrar-proyecto" id="{{proyecto.id}}">Cerrar Proyecto</button>
+      {% endif %}
       <a class="btn btn-primary btn-sm" href="{% url 'webApp:verHistorialProyecto' proyecto.id %}">Ver historial</a>
       {% endif %}
     </div>
