--- a/sistema_metodos_agiles/webApp/templates/home/burndownchart2.html
+++ b/sistema_metodos_agiles/webApp/templates/home/burndownchart2.html
@@ -140,7 +140,7 @@ function showBurnDown(elementId, burndownData, scopeChange = []) {
     );*/
     showBurnDown (
       "burndown43",
-      [  200, 160, 160, 140,  90,  90,  80                  ], //burndown.arrayBurn,   // burndown data
+     burndown.arrayBurn, // [  200, 160, 160, 140,  90,  90,  80                  ], //burndown.arrayBurn,   // burndown data
       [    0,   0,   0,   0,   0,  0,   0,   0,   0,   0    ]
       )
  </script>
